<resources>
    <string name="app_name">Medisync</string>
    <string name="subtitle_app">Gestor de salud personal</string>

    <!-- MainActivity -->
    <string name="btn_agendar_cita">Agendar cita médica</string>
    <string name="btn_mis_medicamentos">Mis medicamentos</string>
    <string name="btn_agg_medicam">Agregar medicamento</string>
    <string name="btn_mis_citas">Mis citas médicas</string>
    <string name="btn_administrar_dosis">Administrar dosis</string>
    <string name="btn_crear_tratamiento">Crear Tratamiento</string>

    <!-- AgendarCitaActivity -->
    <string name="title_agendar_cita">Agendar cita médica</string>
    <string name="hint_cita">Nombre de la cita</string>
    <string name="hint_doctor">Nombre del doctor</string>
    <string name="hint_especialidad">Especialidad</string>
    <string name="hint_nota">Nota de la cita</string>
    <string name="hint_fecha">Seleccionar fecha</string>
    <string name="hint_hora">Seleccionar hora</string>
    <string name="btn_guardar_cita">Guardar cita</string>

    <!-- MisCitasActivity -->
    <string name="title_mis_citas">Mis citas médicas</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_editar">Editar</string>

    <!-- AgregarMedicamentoActivity -->
    <string name="title_agg_medicamento">Agregar medicamento</string>
    <string name="hint_medicamento">Nombre del medicamento</string>
    <string name="hint_fecha_caducidad">Seleccionar fecha de caducidad</string>
    <string name="hint_label_contenido">Selecciona la presentación del medicamento:</string>
    <string name="hint_select_contenido_ml">Mililitros</string>
    <string name="hint_select_contenido_gr">Gramos</string>
    <string name="hint_contenido">Ingresa la cantidad de contenido</string>
    <string name="btn_guardar_medicamento">Guardar medicamento</string>

    <!-- MisMedicamentosActivity -->
    <string name="title_mis_medicamentos">Mis Medicamentos</string>
    <string name="hint_buscar_medicamento">Buscar medicamento...</string>

    <!-- CrearTratamientoActivity -->
    <string name="title_crear_tratamiento">Crear Tratamiento</string>
    <string name="hint_seleccionar_medicamento">Seleccionar Medicamento</string>
    <string name="hint_tratamiento">Tratamiento</string>
    <string name="hint_cantidad_dosis">Cantidad por dosis</string>
    <string name="hint_intervalo_horas">Intervalo (horas)</string>
    <string name="hint_fecha_inicio">Fecha de inicio</string>
    <string name="hint_hora_inicio">Hora de inicio</string>
    <string name="hint_duracion">Duración tratamiento (días)</string>
    <string name="btn_guardar_tratamiento">Guardar Tratamiento</string>

    <string name="hint_intervalo">Ingresa el intervalo del consumo de la dosis</string>
</resources>
