<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp">

    <TextView
        android:id="@+id/tituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_app"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/btnAgendCitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_agendar_cita"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/btnAdminCitasMedicas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mis_citas"
        android:layout_marginTop="12dp"/>


    <Button
        android:id="@+id/btnAdminMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_mis_medicamentos"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnAdminDosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_administrar_dosis"
        android:layout_marginTop="12dp"/>

</LinearLayout>
