<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_agg_medicamento"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/etMedicamentoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_medicamento"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/etFechaCaducidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha_caducidad"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_label_contenido"
        android:textSize="18dp"
        android:layout_marginTop="12dp" />

    <RadioGroup
        android:id="@+id/rgUnidadMedida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rbMililitros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_contenido_ml"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/rbGramos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_select_contenido_gr"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contenido"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnGuardarMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_medicamento"
        android:layout_marginTop="24dp"/>

</LinearLayout>
