<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_agendar_cita"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etDoctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_doctor"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEspecialidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_especialidad"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/etNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nota"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha"
        android:focusable="false"
        android:clickable="false"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hora"
        android:focusable="false"
        android:clickable="false"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="none" />


    <Button
        android:id="@+id/btnGuardarCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_cita"
        android:layout_marginTop="24dp"/>

</LinearLayout>
