<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_mis_medicamentos"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <!-- Search -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/hint_buscar_medicamento"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="15dp"/>

    <!-- Lista -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMedicamentos"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="15dp"/>

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditarMedicamento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_editar"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnBorrarMedicamento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_borrar"/>

    </LinearLayout>

</LinearLayout>