<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_mis_citas"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_margin="60dp"/>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="@color/teal_700"
        />

    <TextView
        android:id="@+id/tvTitleProximaCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cita próxima"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvProximaCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sin citas próximas"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_editar"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_borrar"/>

    </LinearLayout>

</LinearLayout>
